[metadata]
name = DTPySide
version = 0.0.1
author = Holence
author_email = Holence08@gmail.com
description = A PySide framework for constructing customizable GUI software.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Holence/DongliTeahousePySide
project_urls =
    Bug Tracker = https://github.com/Holence/DongliTeahousePySide/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
packages = find:
python_requires = >=3.8

[options.packages.find]
where = 